[gd_scene load_steps=21 format=3 uid="uid://dl6tv7oet2jxt"]

[ext_resource type="Texture2D" uid="uid://bmsh0s6amr1u8" path="res://assets/resources/unit_test.png" id="2_xb5ci"]
[ext_resource type="Script" uid="uid://bgjqylyg8052t" path="res://resources/empire/units/HealthComponent.gd" id="3_h141o"]
[ext_resource type="Script" uid="uid://bu625gum4lcu2" path="res://resources/empire/units/AttackComponent.gd" id="4_hyo0f"]
[ext_resource type="Script" uid="uid://chixtoay5fbmj" path="res://resources/empire/units/movement_component.gd" id="6_12525"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xb5ci"]
radius = 82.0
height = 424.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xb5ci"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_l2a1g"]
atlas = ExtResource("2_xb5ci")
region = Rect2(0, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_h141o"]
atlas = ExtResource("2_xb5ci")
region = Rect2(820, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyo0f"]
atlas = ExtResource("2_xb5ci")
region = Rect2(1640, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_12525"]
atlas = ExtResource("2_xb5ci")
region = Rect2(2460, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_t36qh"]
atlas = ExtResource("2_xb5ci")
region = Rect2(0, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qn0t"]
atlas = ExtResource("2_xb5ci")
region = Rect2(820, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_bud83"]
atlas = ExtResource("2_xb5ci")
region = Rect2(1640, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_vymlm"]
atlas = ExtResource("2_xb5ci")
region = Rect2(2460, 870, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_xb5ci"]
atlas = ExtResource("2_xb5ci")
region = Rect2(0, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1kc6"]
atlas = ExtResource("2_xb5ci")
region = Rect2(820, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmuja"]
atlas = ExtResource("2_xb5ci")
region = Rect2(1640, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnc1u"]
atlas = ExtResource("2_xb5ci")
region = Rect2(2460, 70, 740, 730)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hfjt"]
atlas = ExtResource("2_xb5ci")
region = Rect2(0, 870, 740, 730)

[sub_resource type="SpriteFrames" id="SpriteFrames_g3gjs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2a1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h141o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyo0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12525")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t36qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qn0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bud83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vymlm")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xb5ci")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1kc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmuja")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnc1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hfjt")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[node name="TestCharacter" type="CharacterBody2D"]
script = ExtResource("6_12525")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(15, 75)
shape = SubResource("CapsuleShape2D_xb5ci")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xb5ci")

[node name="MovementComponent" type="Node2D" parent="." node_paths=PackedStringArray("nav_agent", "anim")]
script = ExtResource("6_12525")
nav_agent = NodePath("NavigationAgent2D")
anim = NodePath("AnimatedSprite2D")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="MovementComponent"]
path_desired_distance = 25.0
target_desired_distance = 35.0
avoidance_enabled = true
neighbor_distance = 100.0
avoidance_priority = 0.5
debug_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MovementComponent"]
sprite_frames = SubResource("SpriteFrames_g3gjs")
autoplay = "idle"

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("3_h141o")

[node name="AttackComponent" type="Node2D" parent="."]
script = ExtResource("4_hyo0f")

[connection signal="velocity_computed" from="MovementComponent/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
